# zeekpy

./: LICENSE  README.md  pyproject.toml  zeekpy.py
.github/workflows/: ci.yml
tests/: conftest.py  ping-pong.zeek  test_data.py  test_integration.py  test_zeekpy.py
