[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "zeekpy"
dynamic = ["version"]
description = "Async-less library for consuming and publishing events via Zeek's WebSocket API"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11"
dependencies = [
    "websockets>=15.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.15",
]

[tool.setuptools]
py-modules = ["zeekpy"]

[tool.setuptools_scm]
